--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-rc.6",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "firebase": "^8.3.1",
