--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto-js": "^4.0.0",
     "firebase": "^8.3.1",
     "lodash": "^4.17.21",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
